# OpenHIS

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_module_proposal.md
.github/workflows/: ci.yml  release.yml
admin/: main.py
admin/routers/: announcements.py  audit.py  services.py  users.py
ai-controller/: Dockerfile  database.py  orthanc_client.py  runner.py
ai-controller/routers/: artifacts.py  jobs.py  pipelines.py  rules.py  saveback.py
ai-service/: Dockerfile  inference.py  main.py  requirements.txt
ai-service/analyzers/: __init__.py  ct.py  mr.py  us.py  xray.py
analytics/: collector.py
analytics/routers/: export.py  metrics.py
compose/: base.yml  docker-compose.yml
compose/overrides/: ci.yml  mllp-public.yml  production.yml
compose/profiles/: analytics.yml  emr.yml  erp.yml  imaging.yml  laboratory.yml  legacy.yml
docs/: README.md  ROADMAP.md  quickstart.md
docs/V&V/: demo-walkthrough.md  v-and-v-scenario.md
docs/adr/: 0001-redis-streams-as-event-bus.md  0002-integration-hub-as-fhir-adapter.md  0003-mpi-as-identity-spine.md  0005-bus-dead-letter-semantics.md  0006-mpi-matcher-threshold.md
docs/benchmarks/: mpi-matching.md
docs/design/: kafka-migration.md  multi-site.md  profile-marketplace.md
docs/explaining_the_project/: adapter-contract.md  adding-a-module.md  adding-keycloak-sso.md  architecture.md  concepts.md  data-retention.md  profile-contract.md  profiles.md  security.md
docs/guidelines_for_contributors/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
docs/reviews/: PROMPT_DEF-010_DEF-006_FIX.review.md
docs/task-planning/: test-defect-report-2026-04-14.md
docs/task_planning/: 2_Plan_enhance_openhis.md  4_TODO_list.md  5_test_coverage.md  6_uniform_auth.md  INDEX.md  PLAN-2026-07-salvage-and-release.md  README.md  REMEDIATION_PLAN.md  test-defect-report-2026-04-14.md
docs/verification_and_validation/: v-and-v-scenario.md
documentation/: Cohesion_Transformation_Plan.md  FEATURES.md  MIGRATION_PLAN.md  service-contract.md
ehr/: cdss_engine.py  database.py  main.py
ehr/routers/: beds.py  cdss.py  encounters.py  notes.py  orders.py  patients.py  scheduling.py
ehr/static/: index.html
fhir/: application.yaml
fhir-bridge/: Dockerfile
fhir-bridge/routers/: events.py
fhir-bridge/translators/: composition.py  imaging_study.py  medicationrequest.py  observation.py  service_request.py
hl7/: Dockerfile  builder.py  database.py  handlers.py
hl7/routers/: messages.py  send.py
hl7/static/: index.html
infra/keycloak/: openhis-realm.json  openhis-realm.json.j2
infra/nginx/: Dockerfile  nginx.conf  nginx.conf.j2
infra/odoo/: Dockerfile.init  auth_oauth_main.py  auth_oauth_res_users.py  odoo.conf  setup_oidc.py
infra/ohif/: ai-panel.html
infra/openelis/: common.properties  web.xml  (+8 more)
libs/openhis_sdk/: pyproject.toml
libs/openhis_sdk/src/openhis_sdk/: __init__.py  auth.py  bus.py  logging.py  metrics.py  middleware.py  retry.py
lis/: database.py  main.py
mpi/: database.py  matcher.py
nginx/: nginx.conf
ohif/: ai-panel.html  app-config.js
orthanc/: orthanc.json  plugin.py
patient-portal/: Dockerfile  database.py  main.py  proxy.py
pharmacy/: Dockerfile  database.py
platform/: README.md  infra_render.py  nginx_gen.py  opm.py  profile_engine.py  pyproject.toml  requirements.txt
portal/: index.html
postgres/: init-databases.sh
ris/: Dockerfile  database.py  main.py
scripts/: README.md  backup.sh  gen_dev_certs.sh  generate_sample.py  restore.sh  test_phase0.sh  test_phase1.sh
simulator/: Dockerfile  dicom_factory.py  main.py  presets.py
tests/: conftest.py
(+323 files in other folders)
