[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opm"
version = "0.1.0"
description = "OpenHIS Platform Manager — profile-driven deployment CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
opm = "opm:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["opm.py", "profile_engine.py", "nginx_gen.py", "registry.py", "templates/"]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]
