[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openhis-sdk"
version = "0.1.0"
description = "Shared Python library for OpenHIS services"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "redis[hiredis]>=5.0",
    "python-json-logger>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[tool.hatch.build.targets.wheel]
packages = ["src/openhis_sdk"]
