[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openhis-sdk"
version = "0.1.0"
description = "Shared Python library for OpenHIS services"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "redis[hiredis]>=5.0",
    "python-json-logger>=3.0",
    # openhis_sdk.metrics primary backend (zero-dep fallback keeps the SDK
    # importable without it)
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
# fakeredis backs tests/unit/sdk/test_bus.py (in-memory Redis Streams)
# fhir.resources validates the hub CapabilityStatement payload
# (tests/unit/integration-hub/test_hub_fhir_metadata.py)
dev = ["pytest", "pytest-asyncio", "respx", "fakeredis", "fhir.resources>=7.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/openhis_sdk"]
